Ties up Group By operation to the rest of the system