@@ -12,6 +12,7 @@ import com.testbed.boundary.deserializers.JsonOperationsDeserializer;
 import com.testbed.boundary.invocations.InstrumentInvokable;
 import com.testbed.boundary.invocations.Invokable;
 import com.testbed.boundary.invocations.OperationInstrumentation;
+import com.testbed.boundary.invocations.spark.GroupByInvokable;
 import com.testbed.boundary.invocations.spark.JoinInvokable;
 import com.testbed.boundary.invocations.spark.LoadInvokable;
 import com.testbed.boundary.invocations.spark.ProjectInvokable;
@@ -20,6 +21,7 @@ import com.testbed.boundary.invocations.spark.SinkInvokable;
 import com.testbed.boundary.readers.AvroColumnReader;
 import com.testbed.boundary.readers.ColumnReader;
 import com.testbed.boundary.serializers.CSVSerializer;
+import com.testbed.entities.operations.deserialized.DeserializedGroupBy;
 import com.testbed.entities.operations.deserialized.DeserializedJoin;
 import com.testbed.entities.operations.deserialized.DeserializedLoad;
 import com.testbed.entities.operations.deserialized.DeserializedOperation;
@@ -28,6 +30,7 @@ import com.testbed.entities.operations.deserialized.DeserializedProject;
 import com.testbed.entities.operations.deserialized.DeserializedSelect;
 import com.testbed.entities.profiles.Profile;
 import com.testbed.factories.InteractorFactory;
+import com.testbed.interactors.converters.deserializedToLogical.DeserializedToLogicalGroupByConverter;
 import com.testbed.interactors.converters.deserializedToLogical.DeserializedToLogicalJoinConverter;
 import com.testbed.interactors.converters.deserializedToLogical.DeserializedToLogicalLoadConverter;
 import com.testbed.interactors.converters.deserializedToLogical.DeserializedToLogicalOperationConverter;
@@ -37,9 +40,11 @@ import com.testbed.interactors.converters.deserializedToLogical.DeserializedToLo
 import com.testbed.interactors.converters.dispatchers.Dispatcher;
 import com.testbed.interactors.converters.dispatchers.DispatchersFactory;
 import com.testbed.interactors.converters.dispatchers.FilterInDeserializedLoadDispatcher;
+import com.testbed.interactors.converters.dispatchers.GroupByInputTagStreamDispatcher;
 import com.testbed.interactors.converters.dispatchers.JoinInputTagStreamDispatcher;
 import com.testbed.interactors.converters.dispatchers.ProjectInputTagStreamDispatcher;
 import com.testbed.interactors.converters.dispatchers.SelectInputTagStreamDispatcher;
+import com.testbed.interactors.converters.logicalToPhysical.LogicalToPhysicalGroupByConverter;
 import com.testbed.interactors.converters.logicalToPhysical.LogicalToPhysicalJoinConverter;
 import com.testbed.interactors.converters.logicalToPhysical.LogicalToPhysicalLoadConverter;
 import com.testbed.interactors.converters.logicalToPhysical.LogicalToPhysicalOperationConverter;
@@ -62,42 +67,10 @@ import java.util.stream.Stream;
 
 @Configuration
 public class SpringConfiguration {
-    private static final String DESERIALIZED_TO_LOGICAL_LOAD_CONVERTER = "deserializedToLogicalLoadConverter";
-    private static final String DESERIALIZED_TO_LOGICAL_SELECT_CONVERTER = "deserializedToLogicalSelectConverter";
-    private static final String DESERIALIZED_TO_LOGICAL_PROJECT_CONVERTER = "deserializedToLogicalProjectConverter";
-    private static final String DESERIALIZED_TO_LOGICAL_JOIN_CONVERTER = "deserializedToLogicalJoinConverter";
-
-    private static final String LOGICAL_TO_PHYSICAL_LOAD_CONVERTER = "logicalToPhysicalLoadConverter";
-    private static final String LOGICAL_TO_PHYSICAL_SELECT_CONVERTER = "logicalToPhysicalSelectConverter";
-    private static final String LOGICAL_TO_PHYSICAL_PROJECT_CONVERTER = "logicalToPhysicalProjectConverter";
-    private static final String LOGICAL_TO_PHYSICAL_JOIN_CONVERTER = "logicalToPhysicalJoinConverter";
-
     private static final String DESERIALIZED_TO_LOGICAL_CONVERTERS_MAPPING = "deserializedToLogicalConvertersMapping";
     private static final String LOGICAL_CONVERTERS_MAPPING = "logicalConvertersMapping";
     private static final String SPARK_PHYSICAL_OPERATION_TO_INVOKABLE_MAPPING = "sparkPhysicalOperationToInvokableMapping";
     private static final String SPARK_PHYSICAL_OPERATION_TO_INSTRUMENT_INVOKABLE_MAPPING = "sparkPhysicalOperationToInstrumentInvokableMapping";
-
-    private static final String DESERIALIZED_LOAD = "DeserializedLoad";
-    private static final String DESERIALIZED_SELECT = "DeserializedSelect";
-    private static final String DESERIALIZED_PROJECT = "DeserializedProject";
-    private static final String DESERIALIZED_JOIN = "DeserializedJoin";
-
-    private static final String LOGICAL_LOAD = "LogicalLoad";
-    private static final String LOGICAL_SELECT = "LogicalSelect";
-    private static final String LOGICAL_PROJECT = "LogicalProject";
-    private static final String LOGICAL_JOIN = "LogicalJoin";
-
-    private static final String PHYSICAL_LOAD = "PhysicalLoad";
-    private static final String PHYSICAL_SELECT = "PhysicalSelect";
-    private static final String PHYSICAL_PROJECT = "PhysicalProject";
-    private static final String PHYSICAL_JOIN = "PhysicalJoin";
-    private static final String PHYSICAL_SINK = "PhysicalSink";
-
-    private static final String SPARK_LOAD_INVOKABLE = "sparkLoadInvokable";
-    private static final String SPARK_SELECT_INVOKABLE = "sparkSelectInvokable";
-    private static final String SPARK_PROJECT_INVOKABLE = "sparkProjectInvokable";
-    private static final String SPARK_JOIN_INVOKABLE = "sparkJoinInvokable";
-    private static final String SPARK_SINK_INVOKABLE = "sparkSinkInvokable";
 
     private static final String SPARK_INVOKER = "sparkInvoker";
 
@@ -105,6 +78,44 @@ public class SpringConfiguration {
     private static final String LOCAL = "local[*]";
     private static final String OBJECT_MAPPER_WITH_DESERIALIZED_OPERATION_MIXIN = "objectMapperWithDeserializedOperationMixin";
     private static final String OBJECT_MAPPER_WITH_JAVA_TIME_MODULE = "objectMapperWithJavaTimeModule";
+
+    private static final String DESERIALIZED_TO_LOGICAL_LOAD_CONVERTER = "deserializedToLogicalLoadConverter";
+    private static final String DESERIALIZED_TO_LOGICAL_SELECT_CONVERTER = "deserializedToLogicalSelectConverter";
+    private static final String DESERIALIZED_TO_LOGICAL_PROJECT_CONVERTER = "deserializedToLogicalProjectConverter";
+    private static final String DESERIALIZED_TO_LOGICAL_JOIN_CONVERTER = "deserializedToLogicalJoinConverter";
+    private static final String DESERIALIZED_TO_LOGICAL_GROUP_BY_CONVERTER = "deserializedToLogicalGroupByConverter";
+
+    private static final String LOGICAL_TO_PHYSICAL_LOAD_CONVERTER = "logicalToPhysicalLoadConverter";
+    private static final String LOGICAL_TO_PHYSICAL_SELECT_CONVERTER = "logicalToPhysicalSelectConverter";
+    private static final String LOGICAL_TO_PHYSICAL_PROJECT_CONVERTER = "logicalToPhysicalProjectConverter";
+    private static final String LOGICAL_TO_PHYSICAL_JOIN_CONVERTER = "logicalToPhysicalJoinConverter";
+    private static final String LOGICAL_TO_PHYSICAL_GROUP_BY_CONVERTER = "logicalToPhysicalGroupByConverter";
+
+    private static final String DESERIALIZED_LOAD = "DeserializedLoad";
+    private static final String DESERIALIZED_SELECT = "DeserializedSelect";
+    private static final String DESERIALIZED_PROJECT = "DeserializedProject";
+    private static final String DESERIALIZED_JOIN = "DeserializedJoin";
+    private static final String DESERIALIZED_GROUP_BY = "DeserializedGroupBy";
+
+    private static final String LOGICAL_LOAD = "LogicalLoad";
+    private static final String LOGICAL_SELECT = "LogicalSelect";
+    private static final String LOGICAL_PROJECT = "LogicalProject";
+    private static final String LOGICAL_JOIN = "LogicalJoin";
+    private static final String LOGICAL_GROUP_BY = "LogicalGroupBy";
+
+    private static final String PHYSICAL_LOAD = "PhysicalLoad";
+    private static final String PHYSICAL_SELECT = "PhysicalSelect";
+    private static final String PHYSICAL_PROJECT = "PhysicalProject";
+    private static final String PHYSICAL_JOIN = "PhysicalJoin";
+    private static final String PHYSICAL_GROUP_BY = "PhysicalGroupBy";
+    private static final String PHYSICAL_SINK = "PhysicalSink";
+
+    private static final String SPARK_LOAD_INVOKABLE = "sparkLoadInvokable";
+    private static final String SPARK_SELECT_INVOKABLE = "sparkSelectInvokable";
+    private static final String SPARK_PROJECT_INVOKABLE = "sparkProjectInvokable";
+    private static final String SPARK_JOIN_INVOKABLE = "sparkJoinInvokable";
+    private static final String SPARK_GROUP_BY_INVOKABLE = "sparkGroupByInvokable";
+    private static final String SPARK_SINK_INVOKABLE = "sparkSinkInvokable";
 
     @Bean
     public ColumnReader getColumnReader() {
@@ -146,7 +157,8 @@ public class SpringConfiguration {
                 DESERIALIZED_LOAD, getDeserializedToLogicalLoadConverter(),
                 DESERIALIZED_SELECT, getDeserializedToLogicalSelectConverter(),
                 DESERIALIZED_PROJECT, getDeserializedToLogicalProjectConverter(),
-                DESERIALIZED_JOIN, getDeserializedToLogicalJoinConverter()
+                DESERIALIZED_JOIN, getDeserializedToLogicalJoinConverter(),
+                DESERIALIZED_GROUP_BY, getDeserializedToLogicalGroupByConverter()
         ));
     }
 
@@ -170,12 +182,18 @@ public class SpringConfiguration {
         return new DeserializedToLogicalJoinConverter();
     }
 
+    @Bean(name = DESERIALIZED_TO_LOGICAL_GROUP_BY_CONVERTER)
+    public DeserializedToLogicalOperationConverter getDeserializedToLogicalGroupByConverter() {
+        return new DeserializedToLogicalGroupByConverter();
+    }
+
     @Bean
     public DispatchersFactory getDispatchersFactory() {
         return new DispatchersFactory(getFilterInDeserializedLoadDispatcher(),
                 getSelectInputTagStreamDispatcher(),
                 getProjectStreamDispatcher(),
-                getJoinStreamDispatcher());
+                getJoinStreamDispatcher(),
+                getGroupByStreamDispatcher());
     }
 
     @Bean
@@ -199,6 +217,11 @@ public class SpringConfiguration {
     }
 
     @Bean
+    public Dispatcher<DeserializedGroupBy, Stream<String>> getGroupByStreamDispatcher() {
+        return new GroupByInputTagStreamDispatcher();
+    }
+
+    @Bean
     public LogicalToPhysicalOperationsConverter getLogicalOperationsConverter() {
         return new LogicalToPhysicalOperationsConverter(getProfileDeserializer(), getLogicalConvertersMapping());
     }
@@ -210,12 +233,13 @@ public class SpringConfiguration {
 
     @Bean(name = LOGICAL_CONVERTERS_MAPPING)
     public Map<String, LogicalToPhysicalOperationConverter> getLogicalConvertersMapping() {
-        return Maps.newHashMap(ImmutableMap.of(
+        return Map.of(
                 LOGICAL_LOAD, getLogicalToPhysicalLoadConverter(),
                 LOGICAL_SELECT, getLogicalToPhysicalSelectConverter(),
                 LOGICAL_PROJECT, getLogicalToPhysicalProjectConverter(),
-                LOGICAL_JOIN, getLogicalToPhysicalJoinConverter()
-        ));
+                LOGICAL_JOIN, getLogicalToPhysicalJoinConverter(),
+                LOGICAL_GROUP_BY, getLogicalToPhysicalGroupByConverter()
+        );
     }
 
     @Bean(name = LOGICAL_TO_PHYSICAL_LOAD_CONVERTER)
@@ -238,6 +262,11 @@ public class SpringConfiguration {
         return new LogicalToPhysicalJoinConverter();
     }
 
+    @Bean(name = LOGICAL_TO_PHYSICAL_GROUP_BY_CONVERTER)
+    public LogicalToPhysicalOperationConverter getLogicalToPhysicalGroupByConverter() {
+        return new LogicalToPhysicalGroupByConverter();
+    }
+
     @Bean
     public JobCreator getJobCreator() {
         return new JobCreator();
@@ -250,13 +279,14 @@ public class SpringConfiguration {
 
     @Bean(name = SPARK_PHYSICAL_OPERATION_TO_INSTRUMENT_INVOKABLE_MAPPING)
     public Map<String, Invokable> getSparkPhysicalOperationToInstrumentInvokableMapper() {
-        return Maps.newHashMap(ImmutableMap.of(
+        return Map.of(
                 PHYSICAL_LOAD, getInstrumentInvokable(getSparkLoadInvokable()),
                 PHYSICAL_SELECT, getInstrumentInvokable(getSparkSelectInvokable()),
                 PHYSICAL_PROJECT, getInstrumentInvokable(getSparkProjectInvokable()),
                 PHYSICAL_JOIN, getInstrumentInvokable(getSparkJoinInvokable()),
+                PHYSICAL_GROUP_BY, getInstrumentInvokable(getSparkGroupByInvokable()),
                 PHYSICAL_SINK, getInstrumentInvokable(getSparkSinkInvokable())
-        ));
+        );
     }
 
     public Invokable getInstrumentInvokable(Invokable wrappedInvokable) {
@@ -283,6 +313,11 @@ public class SpringConfiguration {
         return new JoinInvokable();
     }
 
+    @Bean(name = SPARK_GROUP_BY_INVOKABLE)
+    public Invokable getSparkGroupByInvokable() {
+        return new GroupByInvokable();
+    }
+
     @Bean(name = SPARK_SINK_INVOKABLE)
     public Invokable getSparkSinkInvokable() {
         return new SinkInvokable();
@@ -302,13 +337,14 @@ public class SpringConfiguration {
 
     @Bean(name = SPARK_PHYSICAL_OPERATION_TO_INVOKABLE_MAPPING)
     public Map<String, Invokable> getSparkPhysicalOperationToInvokableMapper() {
-        return Maps.newHashMap(ImmutableMap.of(
+        return Map.of(
                 PHYSICAL_LOAD, getSparkLoadInvokable(),
                 PHYSICAL_SELECT, getSparkSelectInvokable(),
                 PHYSICAL_PROJECT, getSparkProjectInvokable(),
                 PHYSICAL_JOIN, getSparkJoinInvokable(),
+                PHYSICAL_GROUP_BY, getSparkGroupByInvokable(),
                 PHYSICAL_SINK, getSparkSinkInvokable()
-        ));
+        );
     }
 
     @Bean
